2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/ObjectiveC2/NSBlocks.m:
	* Source/Additions/GSObjCRuntime.m:
	Fixes to build with latest gcc.

2011-10-15  Gregory Casamento <greg.casamento@gmail.com>

	* Documentation/GNUmakefile: 
	* Documentation/README.initialize: Documentation referred to by
	NSThread warning.

2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* config.mak.in:
	Shift the responsibility for setting up macros controlling thread
	safety to gnustep-make, and use the compiler -pthread option there.

2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/unix/Makefile.preamble:
	* Source/win32/Makefile.preamble:
	* Source/ObjectiveC2/Makefile.preamble:
	* Source/Additions/Makefile.preamble:
	* Source/Makefile.preamble:
	* config.mak.in:
	It seems various BSD operating systems have bugs in their _XOPEN_SOURCE
	implementation, so we can't generally use it.  Try _POSIX_C_SOURCE
	instead.

2011-10-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/unix/Makefile.preamble:
	* Source/win32/Makefile.preamble:
	* Source/ObjectiveC2/Makefile.preamble:
	* Source/Additions/Makefile.preamble:
	* Source/Makefile.preamble:
	Define _REENTRANT as well as _XOPEN_SOURCE for maximum portability.

2011-10-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m:
	* Source/NSPathUtilities.m:
	* Source/NSProcessInfo.m:
	* Source/NSSocketPort.m:
	* Source/NSRunLoop.m:
	* Source/NSMessagePortNameServer.m:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/unix/NSStream.m:
	* Source/GSHTTPURLHandle.m:
	* Source/NSPage.m:
	* Source/NSMessagePort.m:
	* Source/win32/GSFileHandle.m:
	* Source/NSInvocation.m:
	* Source/NSFileManager.m:
	* Source/common.h:
	* Source/NSString.m:
	* Source/NSThread.m:
	* Source/NSData.m:
	* Source/NSHost.m:
	* Source/GSNetwork.h:
	* Source/NSPipe.m:
	* Source/NSLog.m:
	* Source/GSFormat.m:
	* Source/GSFileHandle.m:
	* Source/NSTask.m:
	* SSL/GSSSLHandle.m:
	* Tools/gdnc.m: